Fix other background gradient overflow on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@
   }
 
   h1 {
-    @apply text-[3.75rem] font-bold leading-[100%] lg:text-[4.5rem];
+    @apply text-[3rem] font-bold leading-[100%] lg:text-[4.5rem];
   }
 
   h2 {
